--- a/chain33/平行链上充提币方案设计.md
+++ b/chain33/平行链上充提币方案设计.md
@@ -16,6 +16,16 @@
     
     5.如若需要兑换平行链其他token,则需要用步骤4获取的平行链主币再与其他token进行交易
     
+    **结合txgroup流程**
+    
+    |步骤顺序|操作说明|
+    |-|-|
+    |1|用户构建主链上txgroup，实现将主币转移到相应的平行链上|
+    |2|用户构建平行链txgroup，实现将paracross转移到trade合约下面，并挂单卖出|
+    |3|平行链上监控程序买入，实现将用户的挂单买进|
+    |4|用户将兑换的平行链上的主币从trade合约转出，根据用户自己需求自行处理|
+    
+    
     
   * 提币
   
@@ -28,3 +38,13 @@
     4.调用平行链paracross合约里面的asset_withdraw 方法，将币提到主链的paracross合约里面
     
     5.用户根据自己需求，把paracross合约下的主币提走即可
+
+     **结合txgroup流程**
+     
+     |步骤顺序|操作说明|
+     |-|-|
+     |1|用户在平行链上构建txgroup，实现把平行链的主币转移到trade合约下，并挂单卖出|
+     |2|平行链上监控程序买入，实现接收用户的卖单|
+     |3|用户在平行链上构建txgroup，实现把平行链上的paracross币从trade合约提到paracross合约下，并提到主链|
+     |4|用户在主链上把paracross合约下面的主币转走|
+     
