--- a/chain33/平行链上充提币方案设计.md
+++ b/chain33/平行链上充提币方案设计.md
@@ -48,3 +48,9 @@
      |3|用户在平行链上构建txgroup，实现把平行链上的paracross币从trade合约提到paracross合约下，并提到主链|
      |4|用户在主链上把paracross合约下面的主币转走|
      
+**新方案的优缺点**
+
+   |方案类型|优点|缺点|
+   |-|-|-|
+   |老的充提币程序|无需平行节点做共识|笨重，需要第三方数据库做记录，需要确认高度，需要监控两个地址，需要同时拉去主链和平行链的交易|
+   |新的充提币程序|程序只需监控有无卖单，然后构建接单交易即可，无需确认高度，相对更为简单|需要平行链要有完善的共识节点3N+1，对用户而言，即使用txgroup封装后，也需要用户多次操作，可能有点繁琐|
