--- a/chain33/平行链上充提币方案设计.md
+++ b/chain33/平行链上充提币方案设计.md
@@ -4,6 +4,8 @@
 
 *步骤流程*
   
+  [充提币流程步骤演示](https://github.com/harrylee2015/share/blob/master/chain33/paracross.md)
+  
   * 充币
   
     1.用户先将主链上面的主币转移到paracross 合约下面
