--- a/chain33/平行链上充提币方案设计.md
+++ b/chain33/平行链上充提币方案设计.md
@@ -4,7 +4,7 @@
 
 *步骤流程*
   
-  [充提币流程步骤演示](https://github.com/harrylee2015/share/blob/master/chain33/paracross.md)
+  [充提币步骤操作演示](https://github.com/harrylee2015/share/blob/master/chain33/paracross.md)
   
   * 充币
   
