--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -2,5 +2,16 @@
 
 ## 背景
 
-**比特元主网将在160万的高度(预计是2019年2月22号)迎来一次硬分叉，将增加许多新的功能，如平行链共识，trade内置交易等等。届时旧版本将在160万高度之后不可用，因此需要提前对
-现网中所有老旧版本进行集中性的升级，这里以国盾为例**
+  **比特元主网将在160万的高度(预计是2019年2月22号)迎来一次硬分叉，将增加许多新的功能，如平行链共识，trade内置交易等等。届时旧版本将在160万高度之后不可用，因此需要提前对现网中所有老旧版本进行集中性的升级，这里以国盾为例。**
+
+## 方案一
+
+  **本方案是直接取最新版本，解压，用于替换原有的二进制文件**
+  
+  1.
+
+
+
+
+
+## 方案二
