--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -8,10 +8,24 @@
 
   **本方案是直接取最新版本，解压，用于替换原有的二进制文件**
   
-  1.
+  1. 最新版本下载链接
+  
+     最新主链版本下载地址： https://bty.oss-ap-southeast-1.aliyuncs.com/chain33/mainChain.tar.gz
+  
+     最新平行链版本下载地址：https://bty.oss-ap-southeast-1.aliyuncs.com/chain33/paraChain.tar.gz
 
-
-
-
+  
+  2. 停掉原有比特元进程
+     
+     当你原有的进程名为chain33时，执行
+     ```bash  
+      ps -ef | grep chain33 | grep -v grep | awk '{print $2}' | xargs kill -9 
+     ``` 
+     或者当你原有的进程名为bityuan时，执行
+    
+     ```bash
+      ps -ef | grep bityuan | grep -v grep | awk '{print $2}' | xargs kill -9
+      
+     ```
 
 ## 方案二
