--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -27,5 +27,20 @@
       ps -ef | grep bityuan | grep -v grep | awk '{print $2}' | xargs kill -9
       
      ```
-
+   
+   3. 备份原有数据
+      
+      ```bash
+      mkdir backup
+      ...
+      
+      ```
+    4. 下载最新主链版本，并解压
+      
+      ```bash
+      wget  https://bty.oss-ap-southeast-1.aliyuncs.com/chain33/mainChain.tar.gz
+      
+      tar -xvf mainChain.tar.gz
+      
+      ```
 ## 方案二
