--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -36,7 +36,7 @@
       
       ```
       
-   4. 下载最新主链版本，并解压
+   4. 下载最新主链版本，解压并替换
       
       ```bash
       
@@ -44,5 +44,15 @@
       
       tar -xvf mainChain.tar.gz
       
+      ...
+      
       ```
+    5. 重新启动服务
+      
+      ```bash
+       nohup ./chain33 -f chain33.toml > console.log 2>&1 &
+      ```
+      
+    6.  等待主链同步，检查是否有异常情况
+    
 ## 方案二
