--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -55,6 +55,11 @@
       
    6.  等待主链同步，检查是否有异常情况
       
+       |检查项名称|检查结果
+       |-|-|
+       |同步时间|b|
+       |console日志是否报错|否|
+       |区块hash是否异常|否|
     
 ## 方案二
    
