--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -47,6 +47,123 @@
       ...
       
       ```
+   5. 修改配置文件
+      
+```
+Title="bityuan"
+TestNet=false
+FixTime=false
+
+[log]
+# 日志级别，支持debug(dbug)/info/warn/error(eror)/crit
+loglevel = "debug"
+logConsoleLevel = "info"
+# 日志文件名，可带目录，所有生成的日志文件都放到此目录下
+logFile = "logs/chain33.log"
+# 单个日志文件的最大值（单位：兆）
+maxFileSize = 300
+# 最多保存的历史日志文件个数
+maxBackups = 100
+# 最多保存的历史日志消息（单位：天）
+maxAge = 28
+# 日志文件名是否使用本地事件（否则使用UTC时间）
+localTime = true
+# 历史日志文件是否压缩（压缩格式为gz）
+compress = true
+# 是否打印调用源文件和行号
+callerFile = false
+# 是否打印调用方法
+callerFunction = false
+
+
+[blockchain]
+defCacheSize=512
+maxFetchBlockNum=128
+timeoutSeconds=5
+batchBlockNum=128
+driver="leveldb"
+dbPath="datadir"
+dbCache=64
+isStrongConsistency=false
+singleMode=false
+batchsync=false
+# 用于向平行链发送block的开关，此处要打开
+isRecordBlockSequence=true
+# 用于标示是否平行链节点，此处要关闭
+isParaChain=false
+#新增配置
+enableTxQuickIndex=false
+
+[p2p]
+seeds=[]
+enable=true
+isSeed=false
+serverStart=true
+innerSeedEnable=true
+useGithub=true
+innerBounds=300
+msgCacheSize=10240
+driver="leveldb"
+dbPath="datadir/addrbook"
+dbCache=4
+grpcLogFile="grpc33.log"
+
+
+[rpc]
+# json rpc接口对应的端口
+jrpcBindAddr=":8801"
+# grpc接口对应的端口
+grpcBindAddr=":8802"
+# IP白名单列表，如果配了这个，表示只有在这个列表里的IP才可以访问。配成*代表没有限制
+whitelist=["*"]
+# json/rpc方法对应的白名单列表，如果配了这个，表示只有在这个列表里的方法才可以被访问。配成*代表没有限制
+jrpcFuncWhitelist=["*"]
+# grpc方法对应的白名单列表，如果配了这个，表示只有在这个列表里的方法才可以被访问。配成*代表没有限制
+grpcFuncWhitelist=["*"]
+
+[mempool]
+maxTxNumPerAccount=100
+poolCacheSize=10240
+minTxFee=100000
+
+[consensus]
+# 共识驱动名,支持solo/raft/ticket/tendermint/pbft/para等， BTY主链固定只能配置成ticket。 
+name="ticket"
+minerstart=false
+
+[store]
+name="mavl"
+driver="leveldb"
+dbPath="datadir/mavltree"
+dbCache=128
+localdbVersion="2.0.0"
+
+[store.sub.mavl]
+enableMavlPrefix=false
+enableMVCC=false
+enableMavlPrune=false
+pruneHeight=10000
+
+[wallet]
+minFee=100000
+driver="leveldb"
+dbPath="wallet"
+dbCache=16
+signType="secp256k1"
+
+[wallet.sub.ticket]
+minerdisable=false
+minerwhitelist=["*"]
+
+[exec]
+isFree=false
+minExecFee=100000
+enableStat=false
+
+[exec.sub.token]
+saveTokenTxList=false
+```
+      
    5. 重新启动服务
       
       ```bash
