--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -47,11 +47,10 @@
       ...
       
       ```
-   5. 修改配置文件
+   5. 拷贝下面的配置文件，替换原有旧的配置
       
 ```
 Title="bityuan"
-TestNet=false
 FixTime=false
 
 [log]
@@ -77,33 +76,22 @@ callerFunction = false
 
 
 [blockchain]
-defCacheSize=512
-maxFetchBlockNum=128
-timeoutSeconds=5
-batchBlockNum=128
-driver="leveldb"
 dbPath="datadir"
 dbCache=64
-isStrongConsistency=false
-singleMode=false
 batchsync=false
 # 用于向平行链发送block的开关，此处要打开
 isRecordBlockSequence=true
 # 用于标示是否平行链节点，此处要关闭
-isParaChain=false
+#####isParaChain=false
 #新增配置
 enableTxQuickIndex=false
 
 [p2p]
 seeds=[]
-enable=true
 isSeed=false
-serverStart=true
 innerSeedEnable=true
 useGithub=true
 innerBounds=300
-msgCacheSize=10240
-driver="leveldb"
 dbPath="datadir/addrbook"
 dbCache=4
 grpcLogFile="grpc33.log"
@@ -123,17 +111,8 @@ grpcFuncWhitelist=["*"]
 
 [mempool]
 maxTxNumPerAccount=100
-poolCacheSize=10240
-minTxFee=100000
-
-[consensus]
-# 共识驱动名,支持solo/raft/ticket/tendermint/pbft/para等， BTY主链固定只能配置成ticket。 
-name="ticket"
-minerstart=false
 
 [store]
-name="mavl"
-driver="leveldb"
 dbPath="datadir/mavltree"
 dbCache=128
 localdbVersion="2.0.0"
@@ -145,23 +124,20 @@ enableMavlPrune=false
 pruneHeight=10000
 
 [wallet]
-minFee=100000
-driver="leveldb"
 dbPath="wallet"
 dbCache=16
-signType="secp256k1"
 
 [wallet.sub.ticket]
 minerdisable=false
 minerwhitelist=["*"]
 
 [exec]
-isFree=false
-minExecFee=100000
 enableStat=false
+enableMVCC=false
 
 [exec.sub.token]
 saveTokenTxList=false
+
 ```
       
    5. 重新启动服务
