--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -150,7 +150,7 @@ saveTokenTxList=false
       
        |检查项名称|检查结果
        |-|-|
-       |同步时间|b|
+       |reindex 花费时间|测试是在ssd盘上，reindex 158万个区块，大概用时1个小时不到|
        |console日志是否报错|否|
        |区块hash是否异常|否|
     
@@ -161,5 +161,5 @@ saveTokenTxList=false
    
 ## 平行链同步方案
 
-   **直接取最新平行链版本，解压，用于替换原有的二进制文件**
+   **直接取最新平行链版本，解压，用于替换原有的二进制文件，重跑一遍平行链**
 
