--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -158,8 +158,140 @@ saveTokenTxList=false
    
    **本方案是直接取最新版本，解压，修改配置文件，用最新的版本重新跑一遍**
    
+   操作和方案一类似，用新的配置文件和可执行文件重头开始跑一遍数据。
    
 ## 平行链同步方案
 
    **直接取最新平行链版本，解压，用于替换原有的二进制文件，重跑一遍平行链**
+   
+   1.下载最新的平行链版本,并解压：
+    
+    
+       wget https://bty.oss-ap-southeast-1.aliyuncs.com/chain33/paraChain.tar.gz
+       
+       tar -xvf paraChain.tar.gz
+    
+     
+   2. 修改配置文件，拷贝下面的配置文件，修改相应的rpc服务地址信息即可。
+   
+```bash
+#国盾链专用，参数不要修改
+Title="user.p.guodun."
+# TestNet=true
 
+[log]
+# 日志级别，支持debug(dbug)/info/warn/error(eror)/crit
+loglevel = "debug"
+logConsoleLevel = "info"
+# 日志文件名，可带目录，所有生成的日志文件都放到此目录下
+logFile = "logs/chain33.para.log"
+# 单个日志文件的最大值（单位：兆）
+maxFileSize = 300
+# 最多保存的历史日志文件个数
+maxBackups = 100
+# 最多保存的历史日志消息（单位：天）
+maxAge = 28
+# 日志文件名是否使用本地事件（否则使用UTC时间）
+localTime = true
+# 历史日志文件是否压缩（压缩格式为gz）
+compress = true
+# 是否打印调用源文件和行号
+callerFile = false
+# 是否打印调用方法
+callerFunction = false
+
+
+[blockchain]
+defCacheSize=512
+maxFetchBlockNum=128
+timeoutSeconds=5
+batchBlockNum=128
+driver="leveldb"
+dbPath="paradatadir"
+dbCache=64
+isStrongConsistency=true
+singleMode=true
+batchsync=false
+isRecordBlockSequence=false
+isParaChain = true
+
+[p2p]
+seeds=[]
+enable=false
+isSeed=false
+serverStart=true
+innerSeedEnable=true
+useGithub=true
+innerBounds=300
+msgCacheSize=10240
+driver="leveldb"
+dbPath="paradatadir/addrbook"
+dbCache=4
+grpcLogFile="grpc33.log"
+
+
+[rpc]
+jrpcBindAddr=":8901"
+grpcBindAddr=":8902"
+whitelist=["*"]
+jrpcFuncWhitelist=["*"]
+grpcFuncWhitelist=["*"]
+mainnetJrpcAddr="http://192.168.0.140:8801"
+
+[mempool]
+poolCacheSize=10240
+minTxFee=100000
+
+[consensus]
+name="para"
+genesis="14KEKbYtKKQm4wMthSK9J4La4nAiidGozt"
+
+[consensus.sub.para]
+minerstart=false
+#此处IP改成实际的地址
+ParaRemoteGrpcClient = "192.168.0.140:8802"
+#指定从主链某高度的区块开始同步，如果部署多个平行链节点，两份配置文件中的高度一定要保持一致。
+#建议配置，可以配成比当前主链高度略小，通过区块链浏览器查看当前主网高度
+# https://mainnet.bityuan.com/all/index
+# 比如当前是284110,这边配置可以配成 284100,不建议配差别很大，这样会产生很多无意义的空区块
+startHeight=345800
+#打包时间间隔，单位秒
+writeBlockSeconds=5
+#主链每隔几个没有相关交易的区块，平行链上打包空区块
+emptyBlockInterval=50
+#等待平行链共识消息在主链上链并成功的块数，超出会重发共识消息，最小是2
+waitBlocks4CommitMsg=2
+
+[store]
+name="mavl"
+driver="leveldb"
+dbPath="paradatadir/mavltree"
+dbCache=128
+
+[wallet]
+minFee=100000
+driver="leveldb"
+dbPath="parawallet"
+dbCache=16
+signType="secp256k1"
+minerdisable=true
+
+[exec]
+isFree=true
+minExecFee=100000
+enableStat=false
+
+[exec.sub.manage]
+superManager=[
+        "1JmFaA6unrCFYEWPGRi7uuXY1KthTJxJEP",
+]
+
+[exec.sub.token]
+saveTokenTxList=true
+tokenApprs = [
+        "1JmFaA6unrCFYEWPGRi7uuXY1KthTJxJEP",
+]
+
+[pprof]
+listenAddr = "localhost:6061" 
+```
