--- a/chain33/国盾链升级方案.md
+++ b/chain33/国盾链升级方案.md
@@ -161,8 +161,12 @@ saveTokenTxList=false
    操作和方案一类似，用新的配置文件和可执行文件重头开始跑一遍数据。
    
 ## 平行链同步方案
+   
+   注意：**更新平行链的前提条件是，相应的主链升级是采用方案二进行同步升级的，不然启动后会报ErrHashNotExist错误**
 
    **直接取最新平行链版本，解压，用于替换原有的二进制文件，重跑一遍平行链**
+   
+     
    
    1.下载最新的平行链版本,并解压：
     
@@ -295,3 +299,9 @@ tokenApprs = [
 [pprof]
 listenAddr = "localhost:6061" 
 ```
+  
+    3. 修改好后，启动服务
+       
+      ```bash
+       nohup ./chain33 -f chain33.toml > console.log 2>&1 &
+      ```
