--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -6,3 +6,4 @@
 --------|---|--------
 gosec|golang代码安全扫描工具| https://github.com/securego/gosec/releases
 log15|go项目中的第三方日志打印库| https://github.com/inconshreveable/log15
+nsql|go实现得实时分布式消息系统| https://github.com/nsqio/nsq
