--- a/feeling/未来.md
+++ b/feeling/未来.md
@@ -1,9 +1,9 @@
 # 《未来》
 
 ***
+真正的稳定是我们在风暴之前就未雨绸缪，抓住机会学习，野蛮生长，而不是说燕雀处堂不知大厦将倾，在你最好的年华，满足于优越感和舒适度。
 
-
-
+在这个时代，你的工作会背叛你，你的行业会背叛你，你的专业会背叛你，唯一不能背叛你的，是你的认知和你的能力。
 
 ***
 
