--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -120,36 +120,36 @@ message Gold5GBuy {
 
 **对外查询接口设计：**
 
-f3d round 信息查询
+Gold5G round 信息查询
 ``` protobuf
 // 查询f3d 游戏信息,这里面其实包含了key的最新价格信息
-message QueryF3dByRound {
+message QueryGold5GByRound {
     //轮次，默认查询最新的
     int64 round = 1;
 }
 
-message QueryF3dListByRound {
+message QueryGold5GListByRound {
     //轮次，默认查询最新的
     int64 startRound = 1;
-    //单页返回多少条记录，默认返回10条，单次最多返回50条
+    //单页返回多少条记录，默认返回10条，单次最多返回20条
     int32 count = 2;
     // 0降序，1升序，默认降序
-    int32 direction = 5;
+    int32 direction = 3;
 }
 ```
 
-**买的钥匙key信息记录查询**
+**买的Ticket信息记录查询**
 
 ```protobuf
-// key 信息查询
+// Ticket 信息查询
 message QueryBuyRecordByRoundAndAddr {
     //轮次,必填参数
     int64 round = 1;
     //用户地址
     string addr = 2;
 }
-// 用户key数量查询
-message QueryKeyCountByRoundAndAddr {
+// 用户Ticket数量查询
+message QueryTicketCountByRoundAndAddr {
     //轮次,必填参数
     int64 round = 1;
     //用户地址
@@ -160,7 +160,7 @@ message QueryKeyCountByRoundAndAddr {
 **内部索引value值**
 
 ``` protobuf
-message F3dRecord {
+message Gold5GRecord {
     //用户地址
     string addr = 1;
     //index
@@ -172,30 +172,30 @@ message F3dRecord {
 
 **响应数据**
 ``` protobuf
-//f3d round查询返回数据 
-message ReplyF3dList {
+//Gold5G round查询返回数据 
+message ReplyGold5GList {
     repeated RoundInfo rounds = 1;
 }
 
-message ReplyF3d {
+message ReplyGold5G {
     RoundInfo round = 1;
 }
 
-//用户查询买的key信息返回数据
-message ReplyKeyList {
-    repeated KeyInfo keys = 1;
+//用户查询买的Ticket信息返回数据
+message ReplyGold5GList {
+    repeated TicketInfo tickets = 1;
 }
 
-message ReplyKey {
-    KeyInfo key = 1;
+message ReplyTicket {
+    TicketInfo ticket = 1;
 }
 
-message ReplyKeyCount {
+message ReplyTicketCount {
     int64 count = 1;
 }
 
 //合约内部日志记录，待补全
-message ReceiptF3d {
+message ReceiptGold5G {
     string addr = 1;
     int64  round = 2;
     int64  index      = 3;
@@ -211,110 +211,7 @@ message ReceiptF3d {
 
 ### 1.2.1. 全局接口
 #### 1.2.1.1. 获取游戏轮次信息 GetGameRounds
-**请求结构：**
-```json
-{
-    "startRound":int64,
-    "endRound":int64
-}
-```
 
-|参数|类型|是否必填|说明|
-|----|----|----|----|----|
-|startRound|int64|是|游戏开始轮次，<=0时表示当前轮次，否则为指定轮次|
-|endRound|int64|是|游戏结束轮次，<=0时表示当前轮次，否则为指定轮次|
-
-**返回结构：**
-
-返回RoundInfo数组的json结构信息
-
-#### 1.2.1.2 开奖 EndGameRound
-使用CreateTransaction接口
-
-**请求结构：**
-```json
-{
-    "round":int64
-}
-```
-
-|参数|类型|是否必填|说明|
-|----|----|----|----|----|
-|round|int64|是|游戏轮次|
-
-**返回结构：**
-
-RoundInfo
-
-#### 1.2.1.3 开始下一轮游戏 StartGameRound
-使用CreateTransaction接口
-
-**请求结构：**
-```json
-{
-    "lastRound":int64
-}
-```
-
-|参数|类型|是否必填|说明|
-|----|----|----|----|----|
-|lastRound|int64|是|上一轮游戏轮次，如果<=0，则认为启动第一轮|
-
-**返回结构：**
-
-RoundInfo
-
-### 1.2.2. 用户接口
-#### 1.2.2.1. 创建购买钥匙交易
-使用CreateTransaction接口
-
-**请求结构：**
-```json
-{
-    "keyNum":int64
-}
-```
-
-|参数|类型|是否必填|说明|
-|----|----|----|----|----|
-|keyNum|int64|是|购买钥匙把数，>0有效|
-
-#### 1.2.2.2. 获取用户的中奖信息 GetUserBonus
-**请求结构：**
-```json
-{
-    "user":"string",
-    "startRound":int64,
-    "endRound":int64
-}
-```
-
-|参数|类型|是否必填|说明|
-|----|----|----|----|----|
-|user|string|是|游戏参与者的地址|
-|startRound|int64|是|开始轮次|
-|endRound|int64|是|结束轮次，<=0时，表示当前轮次|
-
-> 数据查询范围为闭区间 [startRound, endRound]
-
-**返回结构：**
-```json
-{
-    [
-        {
-            "round":int64,
-            "keyNum":int64,
-            "bonus":int64
-        }
-    ]
-}
-```
-
-|参数|类型|说明|
-|----|----|----|
-|round|int64|游戏轮次|
-|keyNum|int64|持有的钥匙把数|
-|bonus|int64|拿到的奖金|
 
 
 ## 1.3. 缓存设计
@@ -325,35 +222,32 @@ RoundInfo
 合约配置信息，支持以下配置项：
 ```ini
 # 本游戏合约管理员地址
-f3d.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
+Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 
 # 本游戏合约平台开发者分成地址
-f3d.developer = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+Gold5G.developer = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
 
 # 超级大奖分成百分比
-f3d.bonus.winner = 0.4
+Gold5G.bonus.winner = 0.4
 
 # 参与者分红百分比
-f3d.bonus.key = 0.3
+Gold5G.bonus.key = 0.3
 
 # 滚动到下期奖金池百分比
-f3d.bonus.pool = 0.2
+Gold5G.bonus.pool = 0.2
 
 # 平台运营及开发者费用百分比
-f3d.bonus.developer = 10
+Gold5G.bonus.developer = 10
 
 # 本游戏一轮运行的最长周期（单位：秒）
-f3d.time.life = 3600
+Gold5G.time.life = 3600
 
 # 一把钥匙延长的游戏时间（单位：秒）
-f3d.time.key = 30
+Gold5G.time.key = 30
 
 # 一次购买钥匙最多延长的游戏时间（单位：秒）
-f3d.time.maxkey = 300
+Gold5G.time.maxkey = 300
 
-# 钥匙涨价幅度（下一个人购买钥匙时在上一把钥匙基础上浮动幅度百分比），范围0-1
-f3d.key.price.incr= 0.1
-
-# 钥匙初始价格
-f3d.key.startPrice = 0.1
+#ticket价格
+Gold5G.ticket.Price = 100
 ```
