--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -1,8 +1,10 @@
 # 5G黄金通汇(Gold5G)
 
-## 1.1. 存储设计
+## 1.1 游戏规则
 
-### 1.1.1. 业务模型
+## 1.2. 存储设计
+
+### 1.2.1. 业务模型
 
 **游戏轮次信息：**
 ```protobuf
@@ -63,14 +65,14 @@ message ticketInfo {
 }
 ```
 
-### 1.1.2. 链上存储 StateDB
+### 1.2.2. 链上存储 StateDB
 |键|值|用途|说明|
 |-|-|-|-|
 |mavl-Gold5G-user-tickets:{round}:{addr}|票数|某一轮游戏中用户持购买的tikcet票数|记录游戏参与者购买的票数，变参为游戏轮次和用户地址|
 |mavl-Gold5G-last-round|当前轮次|保存当前轮次||
 |mavl-Gold5G-buy-tickets:{round}:{addr}:{index}|购票信息|存储每笔交易tickets的信息|
 
-### 1.1.3. 本地存储 LocalDB
+### 1.2.3. 本地存储 LocalDB
 |键|值|用途|说明|
 |-|-|-|-|
 |LODB-5G-buy:{round}:{addr}:{index}|index,addr信息|记录用户每次买票存储在stateDB上的，ticket中的index|变参为游戏轮次，用户地址，index|
@@ -83,9 +85,7 @@ message ticketInfo {
 2. 需要提供用户收益的接口吗？如果需要提供需要复用1.1.2 钟的第一个状态存储，效仿f3d方式
 
 
-## 1.2. 接口设计
-
-
+## 1.3. 接口设计
 
 **tx中构造action设计：**
 ```protobuf
@@ -204,20 +204,15 @@ message ReceiptGold5G {
 ```
 
 
+### 1.3.1. 全局接口
+#### 1.3.1.1. 获取游戏轮次信息 GetGameRounds
 
 
 
-
-
-### 1.2.1. 全局接口
-#### 1.2.1.1. 获取游戏轮次信息 GetGameRounds
-
-
-
-## 1.3. 缓存设计
+## 1.4. 缓存设计
 暂无，待需要时补充
 
-## 1.4. 合约配置
+## 1.5. 合约配置
 
 合约配置信息，支持以下配置项：
 ```ini
