--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -1,6 +1,17 @@
 # 5G黄金通汇(Gold5G)
 
 ## 1.1 游戏规则
+### 1.1.1 游戏流程
+     
+    
+    1. ticket价格是每张100个GBT,一注中可以有多个ticket,出局是按注算还是按票算？
+    
+    2. 用户一天只能买一次，这个限制措施是放在合约里还是放在中心化的辅助数据库中处理？（建议放在中心化的数据库中，这样性能要更好一点）
+    
+    3.所有和会员等级，推广相关的功能都放到中心化的辅助系统中实现。
+    
+    4.合约只负责处理固化游戏逻辑。
+     
 
 ## 1.2. 存储设计
 
@@ -23,8 +34,8 @@ message RoundInfo {
     double lastTicketPrice = 6;
     // 当前公排池里奖金
     double bonusSortPool = 7;
-    // 公排池排队用户
-    repeated string  sortPoolAddrs   = 8;  
+    // 公排池排队用户信息
+    repeated  TicketInfo sortPoolInfos   = 8;  
     // 本轮游戏奖金池总额
     double bonusPool  = 9;
     // 本轮游戏参与地址数
@@ -41,7 +52,7 @@ message RoundInfo {
 **每笔交易中的ticket信息：**
 
 ```protobuf
-message ticketInfo {
+message TicketInfo {
     // 游戏轮次  (是由系统合约填写后存储）
     int64 round = 1;
       
@@ -205,8 +216,8 @@ message ReceiptGold5G {
 
 
 ### 1.3.1. 全局接口
-#### 1.3.1.1. 获取游戏轮次信息 GetGameRounds
-
+#### 1.3.1.1. 获取最新游戏轮次信息 GetLastRoundInfo
+ 待补全
 
 
 ## 1.4. 缓存设计
