--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -86,8 +86,8 @@ message TicketInfo {
 ### 1.2.3. 本地存储 LocalDB
 |键|值|用途|说明|
 |-|-|-|-|
-|LODB-5G-buy:{round}:{addr}:{index}|index,addr信息|记录用户每次买票存储在stateDB上的，ticket中的index|变参为游戏轮次，用户地址，index|
-|LODB-5G-AddrInfos:{round}|{addr}|分页记录哪些地址买过ticket|变参为游戏轮次，用户地址|
+|LODB-Gold5G-buy:{round}:{addr}:{index}|index,addr信息|记录用户每次买票存储在stateDB上的，ticket中的index|变参为游戏轮次，用户地址,index|
+|LODB-Gold5G-AddrInfos:{round}|{addr}|分页记录哪些地址买过ticket|变参为游戏轮次，用户地址|
 
 **问题点**
 
