--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -234,25 +234,43 @@ Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 Gold5G.developer = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
 
 # 超级大奖分成百分比
-Gold5G.bonus.winner = 0.4
+Gold5G.bonus.winner = 0.3
 
 # 参与者分红百分比
-Gold5G.bonus.key = 0.3
+Gold5G.bonus.ticket = 0.5
 
 # 滚动到下期奖金池百分比
 Gold5G.bonus.pool = 0.2
 
-# 平台运营及开发者费用百分比
+# 一级推荐奖
+Gold5G.bonus.developer = 3
+
+# 二级推荐奖
+Gold5G.bonus.developer = 2
+
+# 护盘基金
+Gold5G.bonus.developer = 1
+
+# 合伙人分红
+Gold5G.bonus.developer = 2
+
+# 社区
+Gold5G.bonus.developer = 4
+
+# 平台运营及开发者费用
+Gold5G.bonus.developer = 3
+
+# 奖金池
+Gold5G.bonus.developer = 5
+
+# 见点奖
 Gold5G.bonus.developer = 10
 
 # 本游戏一轮运行的最长周期（单位：秒）
 Gold5G.time.life = 3600
 
-# 一把钥匙延长的游戏时间（单位：秒）
-Gold5G.time.key = 30
-
-# 一次购买钥匙最多延长的游戏时间（单位：秒）
-Gold5G.time.maxkey = 300
+# 一笔购买交易延长时间（单位：秒）
+Gold5G.time.ticket = 60
 
 #ticket价格
 Gold5G.ticket.Price = 100
