--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -233,6 +233,24 @@ Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 # 本游戏合约平台开发者分成地址
 Gold5G.developer = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
 
+# 本游戏合约一级推荐奖锁定地址
+Gold5G.firstLevel = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
+# 本游戏合约二级推荐奖锁定地址
+Gold5G.secondaryLevel = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
+# 本游戏用于推广的见点奖锁定地址
+Gold5G.seePrize = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
+# 本游戏合约护盘基金地址
+Gold5G.supportFund = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
+# 本游戏合约平台 合伙人分红地址
+Gold5G.partner = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
+# 本游戏合约平台社区分成地址
+Gold5G.community = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+
 # 超级大奖分成百分比
 Gold5G.bonus.winner = 0.3
 
@@ -243,28 +261,28 @@ Gold5G.bonus.ticket = 0.5
 Gold5G.bonus.pool = 0.2
 
 # 一级推荐奖
-Gold5G.bonus.developer = 3
+Gold5G.bonus.firstLevel = 3
 
 # 二级推荐奖
-Gold5G.bonus.developer = 2
+Gold5G.bonus.secondaryLevel = 2
 
 # 护盘基金
-Gold5G.bonus.developer = 1
+Gold5G.bonus.supportFund = 1
 
 # 合伙人分红
-Gold5G.bonus.developer = 2
+Gold5G.bonus.partner = 2
 
 # 社区
-Gold5G.bonus.developer = 4
+Gold5G.bonus.community = 4
 
 # 平台运营及开发者费用
 Gold5G.bonus.developer = 3
 
 # 奖金池
-Gold5G.bonus.developer = 5
+Gold5G.bonus.bonusPool = 5
 
 # 见点奖
-Gold5G.bonus.developer = 10
+Gold5G.bonus.seePrize = 10
 
 # 本游戏一轮运行的最长周期（单位：秒）
 Gold5G.time.life = 3600
