--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -2,21 +2,41 @@
 
 ## 1.1 游戏规则
 
-### 1.1.1 游戏流程
+### 1.1.1 游戏规则
+ 1. 每一轮持续时间24小时，如果有投入，每单增加1分钟，但剩余时间上限不超过24小时
+ 2. 每次根据玩家等级，一天可投对应的单数 * 次数必须小于上限，一单起投。（详见合伙人）
+ 3. 每单100个币起投，公排池达到105个币，按投入时间顺序退出，如果某个用户一次投多单，按照单进行退出，每满足一单退出一单，直至所有单都退   出，才进行第二个用户的单处理
+4.	每单100个币中，80个币进入公排池
+5.	技术维护基金，3个币，打到项目方提供的冷钱包账户地址
+6.	护盘基金，1个币，打到项目方提供的冷钱包账户地址
+7.	合伙人分红，2个币，打到项目方提供的冷钱包账户地址
+8.	项目方提供一个未分配的资金保存地址
+9.	奖金池，4个币，游戏结束后，倒数100名平分30%，倒数101-5000名平分50%，剩余20%留入下一轮，未分配的资金自动打到8的地址
+10.	推荐奖，1级推荐2个币，2级推荐1个币，未分配的资金自动打到8的地址
+11.	见点奖，20层 * 0.35=7个币，合伙人专享，投单提成, 黄金会员可拿5层，白金会员可拿10层，钻石会员可拿20层，未分配的资金自动打到8的地址
+12.	推荐奖与见点奖会进入到复投账户（用户所属账户，用户只能看，无法操作，下次投单的时候自动优先使用）
 
-    待补充
 
 
-### 1.1.2 关键点
-     
-    1. ticket价格是每张100个GBT,一注中可以有多个ticket,出局是按注算还是按票算？
-    
-    2. 用户一天只能买一次，这个限制措施是放在合约里还是放在中心化的辅助数据库中处理？（建议放在中心化的数据库中，这样性能要更好一点）
-    
-    3. 所有和会员等级，推广相关的功能都放到中心化的辅助系统中实现。
-    
-    4. 合约只负责处理固化游戏逻辑。
-     
+### 1.1.2 游戏会员等级
+**合伙人**  
+
+   会员等级 |会员费|一级提成|二级提成|可投单数（上限）
+   ------|------|----|----------|------
+   普通用户|0       |	0	| 0    |    5
+   黄金合伙人A|500	|   20%|    5%|	10
+   白金合伙人B|	2000|	40%|	8%|	20
+   钻石合伙人C|	5000|	50%|   10%|30
+   
+   所有会员费用都打到8的地址；此外，会员升级的时候，直接再支付新会员的会员费；
+推荐会员的收益按照自己的等级进行计算，基数是自己的会费，提成也参照自身等级比例
+例：
+A推荐B，B推荐C，A是黄金合伙人，B是白金合伙人，C是钻石合伙人
+A提成：500 * 20%+500 * 5%=125个币
+B提成：2000 * 40%=800个币
+
+
+
 
 ## 1.2. 存储设计
 
