--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -256,25 +256,27 @@ message ReceiptGold5G {
 Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 
 # 本游戏合约平台开发者分成地址
-Gold5G.developer = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
-
-# 本游戏合约一级推荐奖锁定地址
-Gold5G.firstLevel = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
-
-# 本游戏合约二级推荐奖锁定地址
-Gold5G.secondaryLevel = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
-
-# 本游戏用于推广的见点奖锁定地址
-Gold5G.seePrize = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
-
-# 本游戏合约护盘基金地址
-Gold5G.supportFund = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+Gold5G.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 
 # 本游戏合约平台 合伙人分红地址
-Gold5G.partner = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+Gold5G.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
-# 本游戏合约平台社区分成地址
-Gold5G.community = 12qyocayNF7Lv6C9qW4avxs2E7U41fKSfv
+# 未分配的奖金地址
+Gold5G.undistributed = 1AuL12ZPYxBV9Pvx1LFcazS5W8pwmtsA4y
+
+# 本游戏合约一级推荐奖锁定地址
+Gold5G.firstLevel = 18pdQ8UoZkhwGWx3UgE6cmy5G2K2QaS4wS
+
+# 本游戏合约二级推荐奖锁定地址
+Gold5G.secondaryLevel = 1Cwu2kCQTth6YmXki5rgg6DEKj8Rys9fu1
+
+# 本游戏用于推广的见点奖锁定地址
+Gold5G.seePrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
+
+# 本游戏合约护盘基金地址
+Gold5G.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
+
+
 
 # 超级大奖分成百分比
 Gold5G.bonus.winner = 0.3
