--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -261,37 +261,33 @@ Gold5G.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 # 本游戏合约平台 合伙人分红地址
 Gold5G.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
-# 未分配的奖金地址
-Gold5G.undistributed = 1AuL12ZPYxBV9Pvx1LFcazS5W8pwmtsA4y
+# 本游戏一等奖奖金锁定地址
+Gold5G.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
 
-# 本游戏合约一级推荐奖锁定地址
-Gold5G.firstLevel = 18pdQ8UoZkhwGWx3UgE6cmy5G2K2QaS4wS
-
-# 本游戏合约二级推荐奖锁定地址
-Gold5G.secondaryLevel = 1Cwu2kCQTth6YmXki5rgg6DEKj8Rys9fu1
-
-# 本游戏用于推广的见点奖锁定地址
-Gold5G.seePrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
+# 本游戏二等奖奖金锁定地址
+Gold5G.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
 
 # 本游戏合约护盘基金地址
 Gold5G.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
 
+# 未分配的奖金地址
+Gold5G.undistributed = 1AuL12ZPYxBV9Pvx1LFcazS5W8pwmtsA4y
 
 
-# 超级大奖分成百分比
-Gold5G.bonus.winner = 0.3
+#一等奖（倒数100名分成百分比）
+Gold5G.bonus.firstPrize = 0.3
 
-# 参与者分红百分比
-Gold5G.bonus.ticket = 0.5
+#二等奖 (倒数101-5000名参与者分红百分比)
+Gold5G.bonus.secondaryPrize = 0.5
 
 # 滚动到下期奖金池百分比
 Gold5G.bonus.pool = 0.2
 
 # 一级推荐奖
-Gold5G.bonus.firstLevel = 3
+Gold5G.bonus.firstLevel = 2
 
 # 二级推荐奖
-Gold5G.bonus.secondaryLevel = 2
+Gold5G.bonus.secondaryLevel = 1
 
 # 护盘基金
 Gold5G.bonus.supportFund = 1
@@ -299,22 +295,26 @@ Gold5G.bonus.supportFund = 1
 # 合伙人分红
 Gold5G.bonus.partner = 2
 
-# 社区
-Gold5G.bonus.community = 4
-
 # 平台运营及开发者费用
 Gold5G.bonus.developer = 3
 
 # 奖金池
-Gold5G.bonus.bonusPool = 5
+Gold5G.bonus.bonusPool = 4
 
-# 见点奖
-Gold5G.bonus.seePrize = 10
+# 见点奖（一层是0.35，根据会员等级分5层，10层，20层）
+Gold5G.bonus.seePrize = 0.35
+
+# 会员等级(黄金可以拿5层见点奖，白金10层，钻石20层）
+Gold5G.level.gold = 5
+
+Gold5G.level.platinum = 10
+
+Gold5G.level.diamond = 20
 
 # 本游戏一轮运行的最长周期（单位：秒）
-Gold5G.time.life = 3600
+Gold5G.time.life = 86400
 
-# 一笔购买交易延长时间（单位：秒）
+# 购买一票延长时间（单位：秒）
 Gold5G.time.ticket = 60
 
 #ticket价格
