--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -51,8 +51,6 @@ message RoundInfo {
     int64 beginTime  = 2;
     // 本轮游戏结束时间
     int64 endTime    = 3;
-    // 本轮游戏最后购买的100名地址
-    repeated string lastHundredAddrs   = 4;
     // 最新的买票时间
     int64 lastTicketTime = 5;
     // 预留字段，最新的ticket的价格
@@ -261,11 +259,14 @@ Gold5G.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 # 本游戏合约平台 合伙人分红地址
 Gold5G.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
-# 本游戏一等奖奖金锁定地址
+# 本游戏一等奖奖金锁定地址(由项目方手动派发）
 Gold5G.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
 
-# 本游戏二等奖奖金锁定地址
+# 本游戏二等奖奖金锁定地址(由项目方手动派发）
 Gold5G.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
+
+# 本游戏推广奖金锁定地址(每轮结束后，由后台统计，系统进行统一派发）
+Gold5G.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
 
 # 本游戏合约护盘基金地址
 Gold5G.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
@@ -283,12 +284,6 @@ Gold5G.bonus.secondaryPrize = 0.5
 # 滚动到下期奖金池百分比
 Gold5G.bonus.pool = 0.2
 
-# 一级推荐奖
-Gold5G.bonus.firstLevel = 2
-
-# 二级推荐奖
-Gold5G.bonus.secondaryLevel = 1
-
 # 护盘基金
 Gold5G.bonus.supportFund = 1
 
@@ -301,15 +296,9 @@ Gold5G.bonus.developer = 3
 # 奖金池
 Gold5G.bonus.bonusPool = 4
 
-# 见点奖（一层是0.35，根据会员等级分5层，10层，20层）
-Gold5G.bonus.seePrize = 0.35
+# 一级推荐+二级+见点奖（一层是0.35，根据会员等级分5层，10层，20层）
+Gold5G.bonus.promotion = 10
 
-# 会员等级(黄金可以拿5层见点奖，白金10层，钻石20层）
-Gold5G.level.gold = 5
-
-Gold5G.level.platinum = 10
-
-Gold5G.level.diamond = 20
 
 # 本游戏一轮运行的最长周期（单位：秒）
 Gold5G.time.life = 86400
