--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -256,7 +256,7 @@ Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 # 本游戏合约平台开发者分成地址
 Gold5G.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 
-# 本游戏合约平台 合伙人分红地址
+# 本游戏平台合伙人分红地址
 Gold5G.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
 # 本游戏一等奖奖金锁定地址(由项目方手动派发）
@@ -270,9 +270,6 @@ Gold5G.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
 
 # 本游戏合约护盘基金地址
 Gold5G.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
-
-# 未分配的奖金地址
-Gold5G.undistributed = 1AuL12ZPYxBV9Pvx1LFcazS5W8pwmtsA4y
 
 
 #一等奖（倒数100名分成百分比）
