--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -102,15 +102,15 @@ message TicketInfo {
 ### 1.2.2. 链上存储 StateDB
 |键|值|用途|说明|
 |-|-|-|-|
-|mavl-Gold5G-user-tickets:{round}:{addr}|票数|某一轮游戏中用户持购买的tikcet票数|记录游戏参与者购买的票数，变参为游戏轮次和用户地址|
-|mavl-Gold5G-last-round|当前轮次|保存当前轮次||
-|mavl-Gold5G-buy-tickets:{round}:{addr}:{index}|购票信息|存储每笔交易tickets的信息|
+|mavl-gold5g-user-tickets:{round}:{addr}|票数|某一轮游戏中用户持购买的tikcet票数|记录游戏参与者购买的票数，变参为游戏轮次和用户地址|
+|mavl-gold5g-last-round|当前轮次|保存当前轮次||
+|mavl-gold5g-buy-tickets:{round}:{addr}:{index}|购票信息|存储每笔交易tickets的信息|
 
 ### 1.2.3. 本地存储 LocalDB
 |键|值|用途|说明|
 |-|-|-|-|
-|LODB-Gold5G-buy:{round}:{addr}:{index}|index,addr信息|记录用户每次买票存储在stateDB上的，ticket中的index|变参为游戏轮次，用户地址,index|
-|LODB-Gold5G-AddrInfos:{round}|{addr}|分页记录哪些地址买过ticket|变参为游戏轮次，用户地址|
+|LODB-gold5g-buy:{round}:{addr}:{index}|index,addr信息|记录用户每次买票存储在stateDB上的，ticket中的index|变参为游戏轮次，用户地址,index|
+|LODB-gold5g-AddrInfos:{round}|{addr}|分页记录哪些地址买过ticket|变参为游戏轮次，用户地址|
 
 **问题点**
 
@@ -251,58 +251,58 @@ message ReceiptGold5G {
 合约配置信息，支持以下配置项：
 ```ini
 # 本游戏合约管理员地址
-Gold5G.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
+gold5g.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 
 # 本游戏合约平台开发者分成地址
-Gold5G.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
+gold5g.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 
 # 本游戏平台合伙人分红地址
-Gold5G.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
+gold5g.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
 # 本游戏一等奖奖金锁定地址(由项目方手动派发）
-Gold5G.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
+gold5g.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
 
 # 本游戏二等奖奖金锁定地址(由项目方手动派发）
-Gold5G.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
+gold5g.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
 
 # 本游戏推广奖金锁定地址(每轮结束后，由后台统计，系统进行统一派发）
-Gold5G.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
+gold5g.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
 
 # 本游戏合约护盘基金地址
-Gold5G.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
+gold5g.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
 
 
 #一等奖（倒数100名分成百分比）
-Gold5G.bonus.firstPrize = 0.3
+gold5g.bonus.firstPrize = 0.3
 
 #二等奖 (倒数101-5000名参与者分红百分比)
-Gold5G.bonus.secondaryPrize = 0.5
+gold5g.bonus.secondaryPrize = 0.5
 
 # 滚动到下期奖金池百分比
-Gold5G.bonus.pool = 0.2
+gold5g.bonus.pool = 0.2
 
 # 护盘基金
-Gold5G.bonus.supportFund = 1
+gold5g.bonus.supportFund = 1
 
 # 合伙人分红
-Gold5G.bonus.partner = 2
+gold5g.bonus.partner = 2
 
 # 平台运营及开发者费用
-Gold5G.bonus.developer = 3
+gold5g.bonus.developer = 3
 
 # 奖金池
-Gold5G.bonus.bonusPool = 4
+gold5g.bonus.bonusPool = 4
 
 # 一级推荐+二级+见点奖（一层是0.35，根据会员等级分5层，10层，20层）
-Gold5G.bonus.promotion = 10
+gold5g.bonus.promotion = 10
 
 
 # 本游戏一轮运行的最长周期（单位：秒）
-Gold5G.time.life = 86400
+gold5g.time.life = 86400
 
 # 购买一票延长时间（单位：秒）
-Gold5G.time.ticket = 60
+gold5g.time.ticket = 60
 
 #ticket价格
-Gold5G.ticket.Price = 100
+gold5g.ticket.Price = 100
 ```
