--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -98,6 +98,17 @@ message TicketInfo {
     int64 index =7;    
 }
 ```
+```protobuf
+message AddrInfo {
+    string addr = 1;
+    int64 keyNum = 2;
+    int64 buyCount = 3;
+    int64 round = 4;
+    float totalCost = 5;
+    float bonus = 6;
+}
+
+```
 
 ### 1.2.2. 链上存储 StateDB
 |键|值|用途|说明|
@@ -116,7 +127,7 @@ message TicketInfo {
 
 1. 如果每笔买入ticket的交易信息都上链，存储在stateDB中，做到可溯源的话，存储的数据会比较多
 
-2. 需要提供用户收益的接口吗？如果需要提供需要复用1.1.2 钟的第一个状态存储，效仿f3d方式
+2. 提供用户收益的接口吗？如果需要提供需要复用1.1.2 钟的第一个状态存储，效仿f3d方式
 
 
 ## 1.3. 接口设计
