--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -98,16 +98,22 @@ message TicketInfo {
     int64 index =7;    
 }
 ```
+**用于记录每轮游戏中每个地址相应购票及基于公排池收益信息**
 ```protobuf
 message AddrInfo {
+    //用户地址
     string addr = 1;
-    int64 keyNum = 2;
+    //用户本轮游戏总共买的票数
+    int64 ticketNum = 2;
+    //买了几次
     int64 buyCount = 3;
+    //第几轮
     int64 round = 4;
-    float totalCost = 5;
-    float bonus = 6;
+    //总的花费
+    double totalCost = 5;
+    //基于公排池的收益
+    double sortPoolBonus = 6;
 }
-
 ```
 
 ### 1.2.2. 链上存储 StateDB
@@ -251,11 +257,11 @@ message ReceiptGold5G {
 
 ### 1.3.1. 全局接口
 #### 1.3.1.1. 获取最新游戏轮次信息 GetLastRoundInfo
- 待补全
+ 具体编码后，补全
 
 
 ## 1.4. 缓存设计
-暂无，待需要时补充
+暂无，暂时不需要
 
 ## 1.5. 合约配置
 
