--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -271,25 +271,25 @@ message ReceiptGold5G {
 
 合约配置信息，支持以下配置项：
 ```ini
-# 本游戏合约管理员地址
+# 本游戏合约管理员地址（热钱包地址）
 gold5g.manager = 14KEKbYtKKQm4wMthSK9J4La4nAiidGozt
 
-# 本游戏合约平台开发者分成地址
+# 本游戏合约平台开发者分成地址（冷钱包地址，由项目方提供）
 gold5g.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 
-# 本游戏平台合伙人分红地址
+# 本游戏平台合伙人分红地址（冷钱包地址，由项目方提供）
 gold5g.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
-# 本游戏一等奖奖金锁定地址(由项目方手动派发）
+# 本游戏一等奖奖金锁定地址（冷钱包地址，由项目方提供）
 gold5g.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
 
-# 本游戏二等奖奖金锁定地址(由项目方手动派发）
+# 本游戏二等奖奖金锁定地址（冷钱包地址，由项目方提供）
 gold5g.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
 
-# 本游戏推广奖金锁定地址(每轮结束后，由后台统计，系统进行统一派发）
+# 本游戏推广奖金锁定地址(热钱包地址，每轮结束后，由后台统计，系统进行统一派发）
 gold5g.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
 
-# 本游戏合约护盘基金地址
+# 本游戏合约护盘基金地址（冷钱包地址，由项目方提供）
 gold5g.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
 
 
