--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -292,6 +292,9 @@ gold5g.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
 # 本游戏合约护盘基金地址（冷钱包地址，由项目方提供）
 gold5g.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
 
+#未分配地址
+gold5g.unassigned = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
+
 
 #一等奖（倒数100名分成百分比）
 gold5g.bonus.firstPrize = 0.3
