--- a/chain33/5G黄金通汇合约设计.md
+++ b/chain33/5G黄金通汇合约设计.md
@@ -280,11 +280,8 @@ gold5g.developer = 1Ft6SUwdnhzryBwPDEnchLeNHgvSAXPbAK
 # 本游戏平台合伙人分红地址（冷钱包地址，由项目方提供）
 gold5g.partner = 1HHy3xZEtEYHjPJYkvWvR25CDPZNLkwZQ4
 
-# 本游戏一等奖奖金锁定地址（冷钱包地址，由项目方提供）
-gold5g.firstPrize = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
-
-# 本游戏二等奖奖金锁定地址（冷钱包地址，由项目方提供）
-gold5g.secondaryPrize = 1NuPawKogkafCncNVmpHmg3qEvCx8GcNWj
+# 本游戏奖金锁定地址（冷钱包地址，由项目方提供）
+gold5g.bonusPool = 1GTqLXA8cjUKWDtXjax9Acs2itwbAQierf
 
 # 本游戏推广奖金锁定地址(热钱包地址，每轮结束后，由后台统计，系统进行统一派发）
 gold5g.promotion = 19MJmA7GcE1NfMwdGqgLJioBjVbzQnVYvR
@@ -296,14 +293,11 @@ gold5g.supportFund = 1CtY2o6AAJv8ae7B4ptADRVnkALvPERYoJ
 gold5g.unassigned = 1GaPfaU8dSAdipzUtWevZq8fMwvKWHnVFc
 
 
-#一等奖（倒数100名分成百分比）
-gold5g.bonus.firstPrize = 0.3
-
-#二等奖 (倒数101-5000名参与者分红百分比)
-gold5g.bonus.secondaryPrize = 0.5
+#一等奖（倒数100名分成百分比）+二等奖 (倒数101-5000名参与者分红百分比)
+gold5g.bonus.bonusPoolThis = 0.8
 
 # 滚动到下期奖金池百分比
-gold5g.bonus.pool = 0.2
+gold5g.bonus.bonusPoolNext = 0.2
 
 # 护盘基金
 gold5g.bonus.supportFund = 1
