--- a/blockchain/京东开源区块链技术调研.md
+++ b/blockchain/京东开源区块链技术调研.md
@@ -1,1 +1,9 @@
 # 京东开源区块链技术调研
+
+github开源地址：https://github.com/blockchain-jd-com/jdchain
+
+[项目白皮书](http://storage.jd.com/jd.block.chain/%E4%BA%AC%E4%B8%9C%E5%8C%BA%E5%9D%97%E9%93%BE%E6%8A%80%E6%9C%AF%E5%AE%9E%E8%B7%B5%E7%99%BD%E7%9A%AE%E4%B9%A62019.pdf)
+
+##  应用场景定位
+
+目前京东区块链主要用于联盟链中的产品溯源，数据存证等
