--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -8,3 +8,4 @@ gosec|golang代码安全扫描工具| https://github.com/securego/gosec/releases
 log15|go项目中的第三方日志打印库| https://github.com/inconshreveable/log15
 nsql|go实现得实时分布式消息系统| https://github.com/nsqio/nsq
 traefik|go实现的反路由代理，支持k8s等微服务框架 | https://github.com/containous/traefik
+chaosblade|阿里巴巴开源得混沌刀片工程，用于模拟系统错误场景|https://github.com/chaosblade-io/chaosblade
