--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -27,6 +27,37 @@
    hostId |INTEGER| 主键，自增长
    groupId|INTEGER|分组
    hostIp|text|主机ip
+   jsonRpcPort|INTEGER|JSONRPC端口
+   gRpcPort|INTEGER|gRpcPort端口
+   lastBlockHeight|INTEGER|最新区块高度
+   lastBlockHash|text|最新区块hash
+   processName|text|进程名称
+   serverPort|INTEGER|服务端口
+   
+   
+   **节点资源表 resourceInfo**
+   
+   略待补充
+   
+   **节点资源告警表 resourceWarning**
+   字段名称|类型|说明
+   -----|------|-------
+   Id |INTEGER| 主键，自增长
+   hostId |INTEGER| 主机id
+   groupId|INTEGER|分组
+   Type|INTEGER|告警类型
+   warning|text|告警内容
+  
+  
+  
+  **节点业务监控表 serviceMonitor**
+
+   字段名称|类型|说明
+   -----|------|-------
+   Id  | INTEGER|主键，自增长
+   hostId |INTEGER| hostId
+   groupId|INTEGER|分组
+   hostIp|text|主机ip
    sshport|INTEGER|端口
    userName|text|用户名称
    passwd|text|密码
