--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -21,19 +21,20 @@
   address|text|代扣地址
 
   **节点信息表 hostInfo**
-
-   字段名称|类型|说明
+  
+  字段名称|类型|说明
    -----|------|-------
-   hostId |INTEGER| 主键，自增长
+   Id  | INTEGER|主键，自增长
+   hostId |INTEGER| hostId
    groupId|INTEGER|分组
    hostIp|text|主机ip
-   jsonRpcPort|INTEGER|JSONRPC端口
-   gRpcPort|INTEGER|gRpcPort端口
-   lastBlockHeight|INTEGER|最新区块高度
-   lastBlockHash|text|最新区块hash
+   sshport|INTEGER|端口
+   userName|text|用户名称
+   passwd|text|密码
    processName|text|进程名称
    serverPort|INTEGER|服务端口
-   
+
+  
    
    **节点资源表 resourceInfo**
    
