--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -7,9 +7,9 @@
    字段名称|类型|说明
    -----|------|-------
    groupId|INTEGER| 主键，自增长
-   groupName|text|分组名称
-   describe|text|描述，说明
-   title|text|平行链title
+   groupName|TEXT|分组名称
+   describe|TEXT|描述，说明
+   title|TEXT|平行链title
 
 
   **代扣地址信息paymentAddress**
@@ -18,7 +18,7 @@
    -----|------|-----
    Id|INTEGER| 主键，自增长
   groupId|INTEGER|分组  
-  address|text|代扣地址
+  address|TEXT|代扣地址
 
   **节点信息表 hostInfo**
   
@@ -27,11 +27,11 @@
    Id  | INTEGER|主键，自增长
    hostId |INTEGER| hostId
    groupId|INTEGER|分组
-   hostIp|text|主机ip
+   hostIp|TEXT|主机ip
    sshport|INTEGER|端口
-   userName|text|用户名称
-   passwd|text|密码
-   processName|text|进程名称
+   userName|TEXT|用户名称
+   passwd|TEXT|密码
+   processName|TEXT|进程名称
    serverPort|INTEGER|服务端口
 
   
@@ -41,13 +41,14 @@
    略待补充
    
    **节点资源告警表 resourceWarning**
+   
    字段名称|类型|说明
    -----|------|-------
    Id |INTEGER| 主键，自增长
    hostId |INTEGER| 主机id
    groupId|INTEGER|分组
    Type|INTEGER|告警类型
-   warning|text|告警内容
+   warning|TEXT|告警内容
   
   
   
@@ -58,9 +59,9 @@
    Id  | INTEGER|主键，自增长
    hostId |INTEGER| hostId
    groupId|INTEGER|分组
-   hostIp|text|主机ip
-   sshport|INTEGER|端口
-   userName|text|用户名称
-   passwd|text|密码
-   processName|text|进程名称
+   hostIp|TEXT|主机ip
    serverPort|INTEGER|服务端口
+   lastBlockHeight|INTEGER|最新区块高度
+   isSync|NUMERIC|是否同步，0表示同步1表示未同步
+   lastBlockHash|TEXT|最新区块hash
+   updateTime|NUMERIC|更新时间
