--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -29,7 +29,7 @@
    groupId|INTEGER|分组
    hostIp|TEXT|主机ip
    sshport|INTEGER|端口
-   userName|TEXT|用户名称
+   userName|TEXT|用户名称 用户名，密码可以为空，当为空时，不会去监控节点资源信息
    passwd|TEXT|密码
    processName|TEXT|进程名称
    serverPort|INTEGER|服务端口
