--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -33,12 +33,21 @@
    passwd|TEXT|密码
    processName|TEXT|进程名称
    serverPort|INTEGER|服务端口
+   createTime|NUMERIC|入库时间
 
   
    
    **节点资源表 resourceInfo**
    
-   略待补充
+   字段名称|类型|说明
+   -----|------|-------
+   Id |INTEGER| 主键，自增长
+   hostId |INTEGER| 主机id
+   groupId|INTEGER|分组
+   mem|NUMERIC|内存
+   cpu|NUMERIC|cpu
+   disk|NUMERIC|磁盘
+   createTime|NUMERIC|入库时间
    
    **节点资源告警表 resourceWarning**
    
@@ -47,8 +56,11 @@
    Id |INTEGER| 主键，自增长
    hostId |INTEGER| 主机id
    groupId|INTEGER|分组
-   Type|INTEGER|告警类型
+   Type|NUMERIC|告警类型 1是内存告警，2是cpu超负荷，3是磁盘不足
    warning|TEXT|告警内容
+   createTime|NUMERIC|告警时间
+   isClosed|NUMERIC|是否处理过了 0表示没有处理，1表示处理过了
+   updateTime|NUMERIC|更新时间
   
   
   
@@ -64,4 +76,37 @@
    lastBlockHeight|INTEGER|最新区块高度
    isSync|NUMERIC|是否同步，0表示同步1表示未同步
    lastBlockHash|TEXT|最新区块hash
+   updateTime|NUMERIC|更新时间
+   
+   **代扣地址余额监控 balance**
+
+   字段名称|类型|说明
+   -----|------|-----
+   Id|INTEGER| 主键，自增长
+  groupId|INTEGER|分组  
+  address|TEXT|代扣地址
+  balance|NUMERIC|余额
+  createTime|NUMERIC|入库时间
+  
+  **节点业务告警**
+  
+  **余额告警 balanceWarning**
+   字段名称|类型|说明
+   -----|------|-------
+   Id |INTEGER| 主键，自增长
+   groupId|INTEGER|分组
+   warning|TEXT|告警内容
+   createTime|NUMERIC|告警时间
+   isClosed|NUMERIC|是否处理过了 0表示没有处理，1表示处理过了
+   updateTime|NUMERIC|更新时间
+   
+   **区块hash不一致告警 blockWaring**
+      字段名称|类型|说明
+   -----|------|-------
+   Id |INTEGER| 主键，自增长
+   groupId|INTEGER|分组
+   warning|TEXT|告警内容
+   blockHeight|INTEGER|区块高度
+   createTime|NUMERIC|告警时间
+   isClosed|NUMERIC|是否处理过了 0表示没有处理，1表示处理过了
    updateTime|NUMERIC|更新时间
