--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -31,9 +31,11 @@
    sshport|INTEGER|端口
    userName|TEXT|用户名称 用户名，密码可以为空，当为空时，不会去监控节点资源信息
    passwd|TEXT|密码
+   isCheckResource|NUMERIC|是否需要检查节点资源使用情况 0表示需要，1表示不需要
    processName|TEXT|进程名称
    serverPort|INTEGER|服务端口
    createTime|NUMERIC|入库时间
+   updateTime|NUMERIC|更新时间
 
   
    
