--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -92,23 +92,14 @@
   
   **节点业务告警**
   
-  **余额告警 balanceWarning**
-  
-   字段名称|类型|说明
-   -----|------|-------
-   Id |INTEGER| 主键，自增长
-   groupId|INTEGER|分组
-   warning|TEXT|告警内容
-   createTime|NUMERIC|告警时间
-   isClosed|NUMERIC|是否处理过了 0表示没有处理，1表示处理过了
-   updateTime|NUMERIC|更新时间
    
-   **区块hash不一致告警 blockWaring**
+   **告警表Warning**
    
    字段名称|类型|说明
    -----|------|-------
    Id |INTEGER| 主键，自增长
    groupId|INTEGER|分组
+   Type|NUMERIC|告警类型 1是内存告警，2是cpu超负荷，3是磁盘不足， 4表示代扣地址余额告警，5表示区块不一致告警，
    warning|TEXT|告警内容
    blockHeight|INTEGER|区块高度
    createTime|NUMERIC|告警时间
