--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -24,8 +24,7 @@
   
   字段名称|类型|说明
    -----|------|-------
-   Id  | INTEGER|主键，自增长
-   hostId |INTEGER| hostId
+   hostId |INTEGER| hostId主键，自增长
    groupId|INTEGER|分组
    hostIp|TEXT|主机ip
    sshport|INTEGER|端口
