--- a/chain33/平行链监控系统接口设计.md
+++ b/chain33/平行链监控系统接口设计.md
@@ -17,7 +17,8 @@
    字段名称|类型|说明
    -----|------|-----
    Id|INTEGER| 主键，自增长
-  groupId|INTEGER|分组  
+  groupId|INTEGER|分组 
+  groupName|TEXT|分组名称
   address|TEXT|代扣地址
 
   **节点信息表 hostInfo**
@@ -25,12 +26,14 @@
   字段名称|类型|说明
    -----|------|-------
    hostId |INTEGER| hostId主键，自增长
+   hostName|TEXT|主机名称
    groupId|INTEGER|分组
+   groupName|TEXT|分组名称
    hostIp|TEXT|主机ip
    sshport|INTEGER|端口
    userName|TEXT|用户名称 用户名，密码可以为空，当为空时，不会去监控节点资源信息
    passwd|TEXT|密码
-   isCheckResource|NUMERIC|是否需要检查节点资源使用情况 0表示需要，1表示不需要
+   isCheckResource|NUMERIC|是否需要检查节点资源使用情况 0表示不检查，1表示检查
    processName|TEXT|进程名称
    serverPort|INTEGER|服务端口
    createTime|NUMERIC|入库时间
@@ -45,9 +48,12 @@
    Id |INTEGER| 主键，自增长
    hostId |INTEGER| 主机id
    groupId|INTEGER|分组
-   mem|NUMERIC|内存
-   cpu|NUMERIC|cpu
-   disk|NUMERIC|磁盘
+   memTotal|NUMERIC|总得内存单位MB
+   memUsedPercent|NUMERIC|内存使用百分比
+   cpuTotal|NUMERIC|cpu核数
+   cpuUsedPercent|NUMERIC|CPU使用百分比
+   diskTotal|NUMERIC|disk总容量，单位GB
+   diskUsedPercent|NUMERIC|磁盘使用百分比
    createTime|NUMERIC|入库时间
    
    **节点资源告警表 resourceWarning**
