--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -12,3 +12,4 @@ chaosblade|阿里巴巴开源得混沌刀片工程，用于模拟系统错误场
 cockroach |云原生SQL数据库|https://github.com/cockroachdb/cockroach
 mirce|分布式微服务框架|https://github.com/micro/micro
 ants|goroutine协程池管理工具|https://github.com/panjf2000/ants
+golang-open-source-projects|go语言比较有价值的开源项目汇总|https://github.com/hackstoic/golang-open-source-projects
