--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -13,3 +13,4 @@ cockroach |云原生SQL数据库|https://github.com/cockroachdb/cockroach
 mirce|分布式微服务框架|https://github.com/micro/micro
 ants|goroutine协程池管理工具|https://github.com/panjf2000/ants
 golang-open-source-projects|go语言比较有价值的开源项目汇总|https://github.com/hackstoic/golang-open-source-projects
+p2p库|go语言实现的libp2p|https://github.com/libp2p/go-libp2p
