--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -7,3 +7,7 @@
 贼好用，神器，像时序图之类的，里面有好多模板，挑一个模块进行修改即可，省去安装软件的一些列繁琐工作。
 
 [processon在线画图网站](https://www.processon.com/)
+
+## goland 2019.02.1 破解汉化版工具
+
+[goland 2019.02.1 破解汉化版工具](http://c.biancheng.net/view/6124.html)
