--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -11,3 +11,4 @@
 ## goland 2019.02.1 破解汉化版工具
 
 [goland 2019.02.1 破解汉化版工具](http://c.biancheng.net/view/6124.html)
+[破解插件下载地址](https://pan.baidu.com/s/17DuJ35QTumAgYHVFHgrVZw)
