--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -13,3 +13,11 @@
 [goland 2019.02.1 破解汉化版工具](http://c.biancheng.net/view/6124.html)
 
 [破解插件下载地址](https://pan.baidu.com/s/17DuJ35QTumAgYHVFHgrVZw)
+
+* 需要在hosts文件中加入地址屏蔽，防止在线校验
+
+```
+0.0.0.0 account.jetbrains.com
+0.0.0.0 www.jetbrains.com
+
+```
