--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -10,7 +10,7 @@
 
 ## goland 2019.02.1 破解汉化版工具
 
-[goland 2019.02.1 破解汉化版工具](http://c.biancheng.net/view/6124.html)
+[goland 2019.03 破解汉化版工具](https://www.jiweichengzhu.com/article/b31ddbd89d8d46ae89c8c560eb8f9edc)
 
 [破解插件下载地址](https://pan.baidu.com/s/17DuJ35QTumAgYHVFHgrVZw)
 
