--- a/blockchain/央行发布的金融分布式账户技术安全规范研读.md
+++ b/blockchain/央行发布的金融分布式账户技术安全规范研读.md
@@ -7,3 +7,19 @@
 
  应实现有效的身份管理，主要功能包括身份注册，身份核实，账户管理，凭证生命周期管理，身份鉴别，节点标识管理，身份更新和撤销等。同时应保证身份信息安全，并对身份进行监管审计。
 
+
+身份注册，身份核实 应该需要中心化的服务去提供，这样的功能
+
+账户管理
+
+功能|内容
+----|----
+账户创建|普通账户，管理员账户，其他有特殊权限的系统账户
+账户授权|普通权限由注册机构注册时独立授权（不需要通过交易的形式注册？），特殊权限则需要全网共识节点达成共识后才能授权？（需要通过交易的形式进行链上注册）
+凭证签发|需要进行实名制的check，检查通过后发送凭证，唯一性？
+账户冻结和解冻|账户冻结由注册机构发起，冻结的账户不能交易
+账户锁定和恢复|用于当私钥遗失，重置外部私钥的情况，需要有一定的锁定期限，在锁定期内不能转移账户下的资产
+账户注销| 账户应设使用期限，过期账户将被注销，提供已注销账户的查询接口
+
+
+
