--- a/feeling/理论知识汇总.md
+++ b/feeling/理论知识汇总.md
@@ -8,7 +8,7 @@
  
 ## 知识点
 
-1. 死锁发生的条件
+### 1. 死锁发生的条件
 
 死锁是指两个或两个以上的进程在执行过程中，由于竞争资源或者由于彼此通信而造成的一种阻塞的现象，若无外力作用，它们都将无法推进下去。此时称系统处于死锁状态或系统产生了死锁，这些永远在互相等待的进程称为死锁进程。
 
@@ -23,7 +23,7 @@
 
 　　这四个条件是死锁的必要条件，只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。
   
-2. MySQL 事务
+### 2. MySQL 事务
 
 MySQL 事务主要用于处理操作量大，复杂度高的数据。比如说，在人员管理系统中，你删除一个人员，你既需要删除人员的基本资料，也要删除和该人员相关的信息，如信箱，文章等等，这样，这些数据库操作语句就构成一个事务！
 
