--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -15,3 +15,4 @@ ants|goroutine协程池管理工具|https://github.com/panjf2000/ants
 golang-open-source-projects|go语言比较有价值的开源项目汇总|https://github.com/hackstoic/golang-open-source-projects
 p2p库|go语言实现的libp2p|https://github.com/libp2p/go-libp2p
 在线代码阅读工具|在线代码阅读工具|https://sourcegraph.com/
+swagger UI |在线API文档工具|https://github.com/xiaoymin/swagger-bootstrap-ui
