--- a/feeling/经典博客文章收藏.md
+++ b/feeling/经典博客文章收藏.md
@@ -5,3 +5,5 @@
 这里主要记录平时个人平时浏览的比较好的博客文章，目的是在于拓宽自己的视野，丰富技术栈，在以后相关的项目技术选型时，也能有相关理论的支撑。
 
 * [memcached与redis的区别](https://www.cnblogs.com/middleware/articles/9052394.html)
+
+* [etcd与zookeeper的使用场景](https://www.cnblogs.com/yogoup/p/12020477.html)
