--- a/feeling/分布式知识汇总.md
+++ b/feeling/分布式知识汇总.md
@@ -13,3 +13,5 @@
 **高可用：** 哪怕发生程序故障、机器损坏，锁仍然能够得到被获取、被释放；
 
 **高性能：** 获取、释放锁的操作消耗小
+
+[分布式锁实现的几种方式](https://segmentfault.com/a/1190000017241446?utm_source=tag-newest)
