--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -17,4 +17,5 @@ p2p库|go语言实现的libp2p|https://github.com/libp2p/go-libp2p
 websocket|go语言实现的websocket编程第三方库|https://github.com/gorilla/websocket
 在线代码阅读工具|在线代码阅读工具|https://sourcegraph.com/
 swagger UI |在线API文档工具|https://github.com/xiaoymin/swagger-bootstrap-ui
+本地缓存库|基于lru失效算法的本地缓存库|https://github.com/hashicorp/golang-lru
 炒股k线分析|交易趋势在线网页|cn.tradingview.com
