--- a/feeling/经典博客文章收藏.md
+++ b/feeling/经典博客文章收藏.md
@@ -7,3 +7,5 @@
 * [memcached与redis的区别](https://www.cnblogs.com/middleware/articles/9052394.html)
 
 * [etcd与zookeeper的使用场景](https://www.cnblogs.com/yogoup/p/12020477.html)
+
+* [分布式缓存介绍](https://zhuanlan.zhihu.com/p/91539644)
