--- a/feeling/经典博客文章收藏.md
+++ b/feeling/经典博客文章收藏.md
@@ -9,3 +9,5 @@
 * [etcd与zookeeper的使用场景](https://www.cnblogs.com/yogoup/p/12020477.html)
 
 * [分布式缓存介绍](https://zhuanlan.zhihu.com/p/91539644)
+
+* [阻塞与非阻塞IO处理](https://blog.csdn.net/shixin_0125/article/details/78777216)
