--- a/docker/阿里云镜像加速.md
+++ b/docker/阿里云镜像加速.md
@@ -18,7 +18,7 @@
 sudo mkdir -p /etc/docker
 sudo tee /etc/docker/daemon.json <<-'EOF'
 {
-  "registry-mirrors": ["https://9mj8k836.mirror.aliyuncs.com"]
+  "registry-mirrors": ["https://xxxx.mirror.aliyuncs.com"]
 }
 EOF
 sudo systemctl daemon-reload
