--- a/feeling/未来.md
+++ b/feeling/未来.md
@@ -1,9 +1,7 @@
 # 《未来》
 
-***
-真正的稳定是我们在风暴之前就未雨绸缪，抓住机会学习，野蛮生长，而不是说燕雀处堂不知大厦将倾，在你最好的年华，满足于优越感和舒适度。
+最近看了一篇文章[在中国程序员是不是吃的青春饭](https://blog.csdn.net/harvic880925/article/details/102850436?depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13&utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13)，看完真的焦虑的狠，发现如果自己不从事这行业的话，真的不知道有什么技能去干别的，我还没成家，但是却背负高额的贷款，加上今年经济形势不好，收入减了不少，父母年纪又大了，未来在哪里？以前指望能从区块链行业获得翻身的资本，现在获取看来真的要给自己准备个planB了，不为别的只为自己的家庭。
 
-在这个时代，你的工作会背叛你，你的行业会背叛你，你的专业会背叛你，唯一不能背叛你的，是你的认知和你的能力。
 
-***
+
 
