--- a/feeling/未来.md
+++ b/feeling/未来.md
@@ -1,6 +1,6 @@
 # 《未来》
 
-最近看了一篇文章[在中国程序员是不是吃的青春饭](https://blog.csdn.net/harvic880925/article/details/102850436?depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13&utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13)，看完真的焦虑的狠，发现如果自己不从事这行业的话，真的不知道有什么技能去干别的，我还没成家，但是却背负高额的贷款，加上今年经济形势不好，收入减了不少，父母年纪又大了，未来在哪里？以前指望能从区块链行业获得翻身的资本，现在获取看来真的要给自己准备个planB了，不为别的只为自己的家庭。
+最近看了一篇文章[在中国程序员是不是吃的青春饭](https://blog.csdn.net/harvic880925/article/details/102850436?depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13&utm_source=distribute.pc_relevant.none-task-blog-BlogCommendHotData-13)，看完真的焦虑的狠，发现如果自己不从事这行业的话，真的不知道有什么技能去干别的，我还没成家，但是却背负高额的贷款，加上今年经济形势不好，收入减了不少，父母年纪又大了，未来在哪里？以前指望能从区块链行业获得翻身的资本，现在看来真的要给自己准备个planB了，不为别的只为自己的家庭。
 
 
 
