--- a/tools/软件设计画图工具.md
+++ b/tools/软件设计画图工具.md
@@ -14,6 +14,8 @@
 
 [破解插件下载地址](https://pan.baidu.com/s/17DuJ35QTumAgYHVFHgrVZw)
 
+
+[goland 破解版本](https://shimo.im/docs/dKYCkd8PrX3ckX99/read)
 * 需要在hosts文件中加入地址屏蔽，防止在线校验
 
 ```
