--- a/tools/技术栈工具表.md
+++ b/tools/技术栈工具表.md
@@ -19,3 +19,4 @@ websocket|go语言实现的websocket编程第三方库|https://github.com/gorill
 swagger UI |在线API文档工具|https://github.com/xiaoymin/swagger-bootstrap-ui
 本地缓存库|基于lru失效算法的本地缓存库|https://github.com/hashicorp/golang-lru
 炒股k线分析|交易趋势在线网页|cn.tradingview.com
+hackerrank|在线语言编码实践网站 |https://www.hackerrank.com/dashboard
