--- a/feeling/软件设计中的一些常用术语解释.md
+++ b/feeling/软件设计中的一些常用术语解释.md
@@ -29,3 +29,30 @@
 接口分离原则(ISP)
 
 依赖反转原则（DIP）
+
+
+
+**中间件**
+  
+  中间件是在操作系统功能范畴外为引用提供服务的多用途软件，任何位于内核和用户应用之间的软件都可以叫做中间件。中间件不提供传统应用的功能而是将软件与其他软件衔接，由于中间件能够让数据从一个应用流动到另一个种，因此把它比如输水管最为贴切
+  
+  分类： 数据访问中间件，远程调用中间件，消息中间件，交易中间件，对象中间件。
+  
+  例如：
+  
+   序号|中间件
+   ----|-----
+   1  | RMI(Remote Method Invocations,远程方法调用)
+   2  | Load Balancing (负载均衡）
+   3  | Transparent Fail-over (透明的故障切换）
+   4  | Clustering(集群，用多个消息的服务器代替大型机）
+   5  | Back-end-Integration(后端集成，用现有的，新开发的系统如何去集成遗留额系统）
+   6  | Transaction 事务（全局/局部）全局事务（分布式事务）局部事务（在同一数据库连接内的事务）
+   7  | Dynamic Redeployment （动态重新部署，在不停止原系统的情况下，部署新的系统）
+   8  | System Manager
+   9  | Threading(多线程处理）
+   10 | Caching(缓存）
+   11 | Mesage Middleware
+    
+  
+  
